--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
                 '/': '/',
             },
             fallbackLanguages: ['zh-tw', 'fr', 'de'],
-            logo: '/_media/icon.svg',
             loadSidebar: false,
             autoHeader: true,
             themeColor: '#0d4f8d',
             subMaxLevel: 3,
-            homepage: 'overview.md',
+            homepage: 'index.md',
             repo: 'RUI-LONG/portfolio',
             auto2top: true,
         }
